<resources>
    <string name="app_name" translatable="false">PuzzleDavid</string>
    <string name="action_settings">Settings</string>
    <string name="enterName">Introduce tu nombre</string>
    <string name="FirstLevelBtn">Primer nivel</string>
    <string name="SecondLevelBtn">Segundo nivel</string>
    <string name="ArrangePuzzle">Ordena el puzzle</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="numIntentos" formatted="false">Intentos: %1$d</string>
    <string name="terminado">¡Enhorabuena, has completado el puzzle!</string>
    <string name="nuevoRecord">¡Nuevo récord!</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="atras">Atrás</string>
    <string name="encenderMusica">Música activada</string>
</resources>