<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puzzle16Activity">

    <TextView
        android:id="@+id/ordenaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="Placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/fila1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/fila2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pieza1"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:onClick="cambiar"
                android:src="@drawable/fila1_columna1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pieza2"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila1_columna2"/>

            <ImageView
                android:id="@+id/pieza3"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila1_columna3"/>

            <ImageView
                android:id="@+id/pieza4"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila1_columna4"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cambiar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/pieza5"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila2_columna1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pieza6"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila2_columna2"/>

            <ImageView
                android:id="@+id/pieza7"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila2_columna3"/>

            <ImageView
                android:id="@+id/pieza8"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila2_columna4"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/fila2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pieza9"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:onClick="cambiar"
                android:src="@drawable/fila3_columna1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pieza10"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila3_columna2"
                app:layout_constraintTop_toTopOf="@+id/pieza1" />

            <ImageView
                android:id="@+id/pieza11"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila3_columna3"
                app:layout_constraintTop_toTopOf="@+id/pieza2" />

            <ImageView
                android:id="@+id/pieza12"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila3_columna4"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fila4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/fila2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pieza13"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:onClick="cambiar"
                android:src="@drawable/fila4_columna1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pieza14"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila4_columna2" />

            <ImageView
                android:id="@+id/pieza15"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila4_columna3"/>

            <ImageView
                android:id="@+id/pieza16"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:onClick="cambiar"
                android:src="@drawable/fila4_columna4"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numIntentos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvTerminado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminado"
        android:visibility="invisible"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNewRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/nuevoRecord"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerminado" />


</androidx.constraintlayout.widget.ConstraintLayout>